Fix text overflow

--- a/src/tree.css
+++ b/src/tree.css
@@ -40,7 +40,7 @@
     text-decoration: none;
     border-radius: 5px;
     text-wrap: nowrap;
-    /* overflow: hidden; */
+    overflow: hidden;
     text-overflow: ellipsis;
     
     &:hover {
@@ -56,6 +56,8 @@
 
 div[type="root"] {
     font-weight: 500;
+    display: flex;
+    flex-direction: column;
 
     & > .list-elem {
         text-transform: uppercase;
@@ -74,6 +76,7 @@ div[type="root"] {
 
 div[type="leaf"] {
     font-weight: 400;
+    display: flex;
 }
 
 div[closed] {
